--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>To collaborate or chat...</h3>
-          <a class="btn" href="mailto:patricia_salinas@kernhigh.org">CONTACT ME</a>
+          <a class="btn" href="mailto:">CONTACT ME</a>
         </div>
       </div>
 
