--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="stylesheet" href="css/styles.css">
   <meta charset="utf-8">
   <title>Patricia Gonzalez-Salinas</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="CSS/styles.css">
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
